# End_to_End_Productionizing-Machine-Learning-Code_And-GemFury

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: test_data_access.py
wqp/: cli.py  data_access.py  evaluation.py  main.py  ml.py  workflow.py
